--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -128,45 +128,46 @@
 
     <!-- Priority Label -->
     <TextView
-        android:id="@+id/priorityLabel"
+        android:id="@+id/TimeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
-        android:text="Priority"
+        android:text="End Time:"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/deadlineDateInput" />
 
-    <!-- Priority Spinner -->
-    <Spinner
-        android:id="@+id/prioritySpinner"
+    <!-- Deadline Time Input -->
+    <EditText
+        android:id="@+id/deadlineTimeInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
+        android:hint="Select End Time"
+        android:inputType="text"
         android:minHeight="48dp"
         android:padding="8dp"
-        android:entries="@array/priority_levels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priorityLabel" />
+        app:layout_constraintTop_toBottomOf="@id/TimeLabel" />
 
     <!-- Submit Button -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submitTaskButton"
         android:layout_width="175dp"
         android:layout_height="48dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button_design"
         android:padding="15dp"
         android:text="Create Task"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/prioritySpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/deadlineTimeInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
