--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,9 +5,9 @@
         android:icon="@drawable/home"
         android:title="Home" />
     <item
-        android:id="@+id/chats"
-        android:icon="@drawable/chat"
-        android:title="Chats" />
+        android:id="@+id/calendar"
+        android:icon="@drawable/calendar"
+        android:title="Calendar" />
     <item
         android:id="@+id/addWorkSpace"
         android:icon="@drawable/baseline_add_24"
