--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="sapphire">#0F52BA</color>
     <color name="yale">#0E4C92</color>
     <color name="darkgreen">#A64CAF50</color>
+    <color name="lightred">#FF796F</color>
 </resources>
